# example-fastapi-project

./: .gitignore  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose-prod.yaml  main.py  pyproject.toml
src/: __init__.py  app.py  database.py  db.py  db_models.py  logging.py  main.py  operations.py  rate_limiter.py  rest_models.py
src/models/: rest_models.py
src/routers/: __init__.py  items.py
tests/: test_api_integration.py  test_operations.py  test_operations_unit.py
